--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,31 @@
-p{
-    color:red;
-}
+/*Clases*/
 .red{
     height: 200px;
     width: 100px;
     background-color: red;
 }
+.container{
+    background: #2193b0;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */        
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.content{
+    max-width: 960px;
+    max-height: 500px;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
+
+/*identificadores*/ 
 #boton-pago{
     background-color: yellow;
 }   
+
+/*tags*/
 td{border: solid 1px;}
