--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,7 @@
     width: 100%;
     height: 100%;
     background-color: white;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 16), 0 3px 6px rgba(0, 0, 0, 23);
 }
 
 .table{
@@ -40,6 +41,14 @@
 
 .fa-solid{
     color: #ffc400;
+}
+
+
+.title-item{
+    border-bottom-style: solid;
+    border-width: 2px;
+    border-color: black;
+    padding-bottom: 1em;
 }
 /*identificadores*/ 
 #boton-pago{
