--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,14 +20,14 @@
 }
 .content{
     max-width: 960px;
-    max-height: 500px;
     width: 100%;
-    height: 100%;
+    height: 80vh;
     background-color: white;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 16), 0 3px 6px rgba(0, 0, 0, 23);
     position: relative;
     padding: 1.8em;
-
+    overflow: scroll;
+   
 }
 .actions{
     position: absolute;
@@ -95,10 +95,20 @@ html{
     font-weight: bold;
     color: #2193b0;
     font-size: 1.2em;
+    margin-top: 2em;
+    display: inline-block;
 }
 
 .main-image{
     float: left;
     margin-right: 1em;
     height: 250px;
+}
+
+@media(min-height:550px){
+    .content{height: 500px;}
+}
+
+@media(max-width:600px){
+    .content{padding: 1em;}
 }
