--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,4 +111,17 @@ html{
 
 @media(max-width:600px){
     .content{padding: 1em;}
+    td{
+        display: block;
+        width: 100%;
+    }
+    td:nth-of-type(1){
+        font-size: 1.5em;
+        font-weight: bold;
+        color: #642B73;
+    }
+    th{
+        display: none;
+
+    }
 }
